--- a/src/boosted_usa/boosted.html
+++ b/src/boosted_usa/boosted.html
@@ -11,6 +11,7 @@
     <title>Boosted</title>
   </head>
   <body>
+    <!-- navbar -->
     <nav class="bg-white/90 fixed h-28 w-full z-50">
       <div class="flex absolute w-full h-full">
         <!-- logo -->
@@ -22,31 +23,49 @@
         </div>
         <!-- list -->
         <ul class="flex flex-wrap font-medium">
-          <li class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]">
+          <li
+            class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]"
+          >
             ELECTRIC BIKES
           </li>
-          <li class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]">
+          <li
+            class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]"
+          >
             SKATEBOARDS
           </li>
-          <li class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]">
+          <li
+            class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]"
+          >
             ONEWHEEL
           </li>
-          <li class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]">
+          <li
+            class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]"
+          >
             SCOOTERS
           </li>
-          <li class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]">
+          <li
+            class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]"
+          >
             UNICYCLES
           </li>
-          <li class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]">
+          <li
+            class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]"
+          >
             LOCATIONS
           </li>
-          <li class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]">
+          <li
+            class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]"
+          >
             ACCESSORIES
           </li>
-          <li class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]">
+          <li
+            class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]"
+          >
             GIFT CARD
           </li>
-          <li class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]">
+          <li
+            class="boarder h-1/2 flex justify-center items-center px-4 hover:text-[#FF4E37]"
+          >
             MORE INFO
           </li>
         </ul>
@@ -90,10 +109,175 @@
     </div>
     <!-- black strip -->
     <div class="w-full h-16 bg-black flex justify-around items-center">
-        <img src="./images/electrik.webp" alt="">
-        <img src="./images/techChruch.webp" alt="">
-        <img src="./images/populer.webp" alt="">
-        <img src="./images/wired.webp" alt="">
+      <img src="./images/electrik.webp" alt="" />
+      <img src="./images/techChruch.webp" alt="" />
+      <img src="./images/populer.webp" alt="" />
+      <img src="./images/wired.webp" alt="" />
     </div>
+    <!-- sometext -->
+    <div class="flex justify-center w-full mt-4 mb-4">
+      <div class="flex relative flex-col justify-center w-1/2">
+        <div class="flex justify-center">
+          <h1 class="text-3xl w-full text-center mt-12 mb-2 font-bold">
+            Looking for Boosted Revs <br />Super 73 bikes - Evolve Skateboards
+            <br />
+            or Minimotors Dualtron / Speedway?
+          </h1>
+        </div>
+        <h3 class="flex justify-center font-semibold">
+          While we LOVE Boosted- We also LOVE
+        </h3>
+        <p class="flex justify-center">Super73, Evolve and Minimotors.</p>
+        <p class="text-sm mt-4">
+          Boosted USA is now offering
+          <span class="text-[#FF2424]"
+            >Super73 Electric bikes and Accessories,
+            <span class="underline"
+              >Evolve Skateboards, and <br /><span class="underline"
+                >Accessories</span
+              ></span
+            >
+            <span class="text-black">as well as</span> Minimotors</span
+          >
+          Electic Scooters
+        </p>
+        <p class="flex justify-center mt-4 mb-6 font-medium">
+          Bikes Boards and Scooters are in stock and shipping now.
+        </p>
+      </div>
+    </div>
+    <!-- products -->
+    <div class="flex flex-col">
+      <div class="flex w-full h-screen overflow-hidden">
+        <img
+          src="./images/super73.webp"
+          alt=""
+          class="m-4 hover:scale-110 duration-150 ease-out"
+        />
+        <div class="flex items-center justify-start m-6">
+          <div class="flex flex-col items-start space-y-6">
+            <h1 class="text-3xl font-bold">Why Super73?</h1>
+            <h3 class="font-light">
+              Super73 Electric Bikes are the industry standard in style and
+              performance!
+            </h3>
+            <h2 class="font-bold">Fun for every rider!</h2>
+            <p class="font-light">
+              With a bike for every rider and any condition, Super73 is the
+              easiest get on and go e-bike out there. With multiple levels of
+              pedal assist and speed levels, these bikes can be customized to
+              changing terrains and specific riders. Don't feel like pedaling?
+              All Super73's have throttles installed. Throw in an easy and
+              intuitive app that allows on the fly changes as well as software
+              updates and there isn't anything you can't tackle in style.
+            </p>
+            <a
+              href="#"
+              class="bg-[#FF2424] rounded-full pt-2 pb-2 pr-4 pl-4 hover:text-white hover:bg-[#FF2420]"
+              >Shop all bikes</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="w-full h-screen">
+        <div class="flex w-full h-screen overflow-hidden">
+          <div class="flex items-center justify-start m-6">
+            <div class="flex flex-col items-start space-y-6">
+              <h1 class="text-3xl font-bold">
+                Why Minimotors Electric Scooters?
+              </h1>
+              <h3 class="font-light">
+                Build quality is as impressive as the performance.
+              </h3>
+
+              <p class="font-light">
+                Dualtron Electric Scooters represent the highest quality
+                electric scooters you can find today. They are the best built,
+                most capable, and have the longest range in the market.
+                Experience the best electric scooters in the world. Redefining
+                transport!
+              </p>
+              <a
+                href="#"
+                class="bg-[#FF2424] rounded-full pt-2 pb-2 pr-4 pl-4 hover:text-white hover:bg-[#FF2420]"
+                >Shop all bikes</a
+              >
+            </div>
+          </div>
+          <img
+            src="./images/electricScooter.webp"
+            alt=""
+            class="m-4 hover:scale-110 duration-150 ease-out"
+          />
+        </div>
+      </div>
+      <div class="w-full h-screen">
+        <div class="flex w-full h-screen overflow-hidden">
+          <img
+            src="./images/Evolvesketboards.webp"
+            alt=""
+            class="m-4 hover:scale-110 duration-150 ease-out"
+          />
+          <div class="flex items-center justify-start m-6">
+            <div class="flex flex-col items-start space-y-6">
+              <h1 class="text-3xl font-bold">Why Evolve Skateboards?</h1>
+              <p class="font-light">
+                Thoughtfully crafted, Evolve boards are high-performance
+                machines that marry strength, sophistication, and the highest
+                quality materials with cutting-edge technology.
+              </p>
+              <h3 class="font-light">
+                Super73 Electric Bikes are the industry standard in style and
+                performance!
+              </h3>
+              <h2 class="font-bold">Built by riders for riders!</h2>
+              <p class="font-light">
+                volve Skateboards was born in Australia, in 2008, through sheer
+                passion and obsession for finding the link between snowboarding,
+                surfing, and all things carving on land. After scouring the
+                world for the best electric skateboard, Evolve was developed out
+                of the need for aesthetically refined and quality electric
+                skateboards that were focused on creating the ultimate endless
+                wave experience
+              </p>
+              <a
+                href="#"
+                class="bg-[#FF2424] rounded-full pt-2 pb-2 pr-4 pl-4 hover:text-white hover:bg-[#FF2420]"
+                >Shop all bikes</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- man riding byclye -->
+    <div
+      class="flex justify-center h-screen w-full"
+      style="background-image: url('./images/bike.webp')"
+    >
+      <div class="flex flex-col items-center space-y-6 mt-4 p-10">
+        <h3 class="font-bold">High-Performence</h3>
+        <h1 class="text-5xl font-bold">Electric Scooters</h1>
+        <p class="text-center m-8 font-semibold">
+          Cruising campus, going to work or getting through that <br />
+          long list of errands has never been easier or more fun.
+        </p>
+        <a
+          href="#"
+          class="bg-[#FF2424] rounded-full pt-2 pb-2 pr-4 pl-4 text-white hover:text-black hover:bg-[#FF2420]"
+          >Shop all bikes</a
+        >
+      </div>
+    </div>
+    <!-- youtube video -->
+    <iframe
+      src="https://www.youtube.com/embed/NMThdHhrLoM?si=S55SIZrKB2hegTEb"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen
+      class="w-screen h-screen p-10"
+    ></iframe>
   </body>
 </html>
