--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
         <h1 class="text-3xl font-bold mb-4">Welcome to My Website</h1>
         <ul class="list-disc ml-6">
             <li><a href="./Medium/medium.html" class="text-blue-500 hover:underline">Medium</a></li>
-            <li><a href="page2.html" class="text-blue-500 hover:underline">Page 2</a></li>
-            <li><a href="page3.html" class="text-blue-500 hover:underline">Page 3</a></li>
+            <li><a href="./boosted_usa/boosted.html" class="text-blue-500 hover:underline">Boosted USA</a></li>
+            <!-- <li><a href="page3.html" class="text-blue-500 hover:underline">Page 3</a></li> -->
         </ul>
     </div>
 </body>
