--- a/src/Medium/medium.html
+++ b/src/Medium/medium.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <nav
-      class="flex fixed justify-between w-screen sm:h-[5vh] h-20 sm:px-3 sm:w-auto sm:pr-0 items-center px-10 border-b-2 border-black backdrop-blur-sm"
+      class="flex fixed justify-between w-screen  h-20  items-center px-10 border-b-2 border-black backdrop-blur-sm"
     >
-      <h1 class="text-4xl font-bold font-serif sm:text-2xl">Medium</h1>
+      <h1 class="text-4xl font-bold font-serif ">Medium</h1>
       <div class="flex justify-between items-center">
         <ul class="flex justify-between items-center space-x-6 font-light">
           <li class="sm:hidden">Our Story</li>
