--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <ul class="list-disc ml-6">
             <li><a href="./Medium/medium.html" class="text-blue-500 hover:underline">Medium</a></li>
             <li><a href="./boosted_usa/boosted.html" class="text-blue-500 hover:underline">Boosted USA</a></li>
-            <!-- <li><a href="page3.html" class="text-blue-500 hover:underline">Page 3</a></li> -->
+            <li><a href="./dropbox/dropbox.html" class="text-blue-500 hover:underline">Dropbox</a></li>
         </ul>
     </div>
 </body>
