--- a/src/dropbox/dropbox.html
+++ b/src/dropbox/dropbox.html
@@ -61,10 +61,8 @@
       </div>
     </div>
     <!-- pricing -->
-    <div class="mt-14">
-      <div
-        class="flex justify-center items-center pt-6 pb-6 gap-6 bg-green-500"
-      >
+    <div class="mt-14 p-4">
+      <div class="flex justify-center items-center pt-6 pb-6 gap-6">
         <div>
           <input
             type="radio"
@@ -73,7 +71,7 @@
             value="monthly"
             class="checked:bg-blue-500 w-6 h-6 gap-1"
           />
-          <label for="monthly" class="text-2xl">Billed monthly</label>
+          <label for="monthly" class="text-xl">Billed monthly</label>
         </div>
         <div>
           <input
@@ -83,14 +81,205 @@
             value="yearly"
             class="checked:bg-blue-500 w-6 h-6 gap-1"
           />
-          <label for="yearly" class="text-2xl">Billed yearly</label>
+          <label for="yearly" class="text-xl">Billed yearly</label>
         </div>
       </div>
-      <div class="flex flex-col p-6">
-        <div class="">on development branch</div>
-        <div></div>
-        <div></div>
+      <!-- cards -->
+      <div class="flex flex-col p-4 space-y-8">
+        <!-- card 1 -->
+        <div
+          class="card bg-[#F7F5F2] text-left p-4 border rounded-xl space-y-6"
+        >
+          <div class="space-y-2">
+            <p class="text-sm text-slate-900">For Professionals</p>
+            <h1 class="text-2xl font-semibold">Essentials</h1>
+            <h2 class="text-xl font-semibold">$16.58 / month</h2>
+          </div>
+          <div>
+            <a
+              href="#"
+              class="bg-[#3984FF] px-8 py-6 rounded-3xl font-semibold w-full text-white"
+              >Try it for free <i class="ri-arrow-right-line"></i
+            ></a>
+          </div>
+          <div class="space-y-2">
+            <h1 class="mb-4 font-semibold">
+              or buy now<i class="ri-arrow-right-line"></i>
+            </h1>
+            <p><i class="ri-user-line pr-2"></i>1 User</p>
+            <p>
+              <i class="ri-time-line pr-2"></i
+              ><span class="font-bold">3 TB </span>of storage
+            </p>
+            <p>
+              <i class="ri-rocket-line pr-2"></i>Transfer file upto
+              <span class="font-bold">100 GB</span>
+            </p>
+            <p>
+              <i class="ri-time-line pr-2"></i>180 days of restore delete files
+            </p>
+            <p>
+              <i class="ri-bar-chart-box-line pr-2"></i>Track file engagement
+            </p>
+            <p><i class="ri-rfid-line pr-2"></i>Unlimited Signature requests</p>
+            <p><i class="ri-sticky-note-line pr-2"></i>PDF editing</p>
+            <p>
+              <i class="ri-tv-2-line pr-2"></i>Record, review and edit videos
+            </p>
+          </div>
+        </div>
+        <!-- card 2 -->
+        <div
+          class="card bg-[#F7F5F2] text-left p-4 border rounded-xl space-y-6"
+        >
+          <div class="space-y-2">
+            <p class="text-sm text-slate-900">For smaller teams</p>
+            <h1 class="text-2xl font-semibold">Business</h1>
+            <h2 class="text-xl font-semibold">$15 / user / month</h2>
+          </div>
+          <div>
+            <a
+              href="#"
+              class="bg-[#3984FF] px-8 py-6 rounded-3xl font-semibold w-full text-white"
+              >Try it for free <i class="ri-arrow-right-line"></i
+            ></a>
+          </div>
+          <div class="space-y-2">
+            <h1 class="mb-4 font-semibold">
+              or buy now<i class="ri-arrow-right-line"></i>
+            </h1>
+            <p><i class="ri-user-line pr-2"></i>3+ User</p>
+            <p>
+              <i class="ri-time-line pr-2"></i
+              ><span class="font-bold">9 TB </span>of storage
+            </p>
+            <p>
+              <i class="ri-rocket-line pr-2"></i>Transfer file upto
+              <span class="font-bold">100 GB</span>
+            </p>
+            <p>
+              <i class="ri-time-line pr-2"></i>180 days of restore delete files
+            </p>
+            <p>
+              <i class="ri-bar-chart-box-line pr-2"></i>Track file engagement
+            </p>
+            <p><i class="ri-rfid-line pr-2"></i>Unlimited Signature requests</p>
+            <p><i class="ri-sticky-note-line pr-2"></i>PDF editing</p>
+            <p>
+              <i class="ri-tv-2-line pr-2"></i>Record, review and edit videos
+            </p>
+          </div>
+        </div>
+        <!-- card 3 -->
+        <div
+          class="card bg-[#F7F5F2] text-left p-4 border rounded-xl space-y-6"
+        >
+          <div class="space-y-2">
+            <p class="text-sm text-slate-900">For large teams</p>
+            <h1 class="text-2xl font-semibold">Business Plus</h1>
+            <h2 class="text-xl font-semibold">$24 / user / month</h2>
+          </div>
+          <div>
+            <a
+              href="#"
+              class="bg-[#3984FF] px-8 py-6 rounded-3xl font-semibold w-full text-white"
+              >Try it for free <i class="ri-arrow-right-line"></i
+            ></a>
+          </div>
+          <div class="space-y-2">
+            <h1 class="mb-4 font-semibold">
+              or buy now<i class="ri-arrow-right-line"></i>
+            </h1>
+            <p><i class="ri-user-line pr-2"></i>1 User</p>
+            <p>
+              <i class="ri-time-line pr-2"></i
+              ><span class="font-bold">15 TB </span>of storage
+            </p>
+            <p>
+              <i class="ri-rocket-line pr-2"></i>Transfer file upto
+              <span class="font-bold">250 GB</span>
+            </p>
+            <p>
+              <i class="ri-time-line pr-2"></i>180 days of restore delete files
+            </p>
+            <p>
+              <i class="ri-bar-chart-box-line pr-2"></i>Track file engagement
+            </p>
+            <p><i class="ri-rfid-line pr-2"></i>Unlimited Signature requests</p>
+            <p><i class="ri-sticky-note-line pr-2"></i>PDF editing</p>
+            <p>
+              <i class="ri-tv-2-line pr-2"></i>Record, review and edit videos
+            </p>
+          </div>
+        </div>
       </div>
+    </div>
+    <!-- information box -->
+    <div class="space-y-10 bg-[#F7F5F2] pb-10">
+      <h1 class="text-3xl font-semibold pl-4 pr-4 text-center pt-10">
+        Dropbox supports you and your business at every stage
+      </h1>
+      <div class="pl-10 pr-10 space-y-8">
+        <div class="space-y-3">
+          <img src="./images/lock.svg" alt="lock" />
+          <h1 class="text-2xl font-semibold">Store and protect your files</h1>
+          <p class="text-xl font-light">
+            Starting at 3 TB of team storage and backup, with security features
+            like file recovery, password protection, watermarking, and viewer
+            history.
+          </p>
+        </div>
+        <div class="space-y-3">
+          <img src="./images/mag.svg" alt="lock" />
+          <h1 class="text-2xl font-semibold">Share your content</h1>
+          <p class="text-xl font-light">
+            Forget email attachments. With Dropbox, you can deliver large files
+            and share trackable links with real-time document analytics to help
+            make data-driven decisions.
+          </p>
+        </div>
+        <div class="space-y-3">
+          <img src="./images/msg.svg" alt="lock" />
+          <h1 class="text-2xl font-semibold">Collaborate on your work</h1>
+          <p class="text-xl font-light">
+            Reduce meetings with Capture and use Replay to streamline feedback
+            and approval processes on video projects.
+          </p>
+        </div>
+        <div class="space-y-3">
+          <img src="./images/note.svg" alt="lock" />
+          <h1 class="text-2xl font-semibold">Manage your business</h1>
+          <p class="text-xl font-light">
+            Make it easy to prepare, send, and eSign your most important
+            contracts. Automate manual processes with tools like eSignature
+            templates, which let you reuse documents in seconds.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- usage -->
+    <div class="bg-[#1E1919] text-white pt-10 space-y-10">
+      <div class="space-y-6">
+        <h1 class="text-center font-semibold text-2xl ml-6 mr-6">
+          Over 600,000 teams use Dropbox
+        </h1>
+        <p class="text-center text-xl font-semibold ml-6 mr-6">
+          Learn more about our customers<i class="ri-arrow-right-line"></i>
+        </p>
+      </div>
+      <div class="pl-8 pr-8 text-start">
+        <div class="flex justify-center items-center p-12 bg-[#B4DC19]">
+          <img src="./images/designit.svg" alt="" />
+        </div>
+        <p class="pb-6">
+          “Our team is constantly working across different countries, time zones
+          and offices. A lot of solutions can accommodate that now, but none
+          make it as seamless as Dropbox and Dropbox Paper.”
+        </p>
+        <a href="#" class="font-semibold text-xl">View case studies<i class="ri-arrow-right-line"></i></a>
+        <p class="font-semibold">Morten Thomsen</p>
+        <p class="text-slate-700 font-semibold">Global IT Lead</p>
+    </div>
     </div>
   </body>
 </html>
