dropbox mobile ui completed

--- a/src/dropbox/dropbox.html
+++ b/src/dropbox/dropbox.html
@@ -258,7 +258,9 @@
       </div>
     </div>
     <!-- usage -->
-    <div class="bg-[#1E1919] text-white pt-10 space-y-10">
+    <div
+      class="bg-[#1E1919] text-white pt-10 space-y-10 border-b-2 border-slate-500"
+    >
       <div class="space-y-6">
         <h1 class="text-center font-semibold text-2xl ml-6 mr-6">
           Over 600,000 teams use Dropbox
@@ -276,10 +278,124 @@
           and offices. A lot of solutions can accommodate that now, but none
           make it as seamless as Dropbox and Dropbox Paper.”
         </p>
-        <a href="#" class="font-semibold text-xl">View case studies<i class="ri-arrow-right-line"></i></a>
+        <a href="#" class="font-semibold text-xl"
+          >View case studies<i class="ri-arrow-right-line"></i
+        ></a>
         <p class="font-semibold">Morten Thomsen</p>
         <p class="text-slate-700 font-semibold">Global IT Lead</p>
+      </div>
     </div>
+    <!-- blackbox -->
+    <div class="pt-10 pb-10 pl-6 pr-6 space-y-6 bg-[#1E1919]">
+      <div class="bg-[#2B2929]">
+        <img src="./images/forwork.webp" alt="" />
+        <div class="pt-10 pb-10 pl-6 pr-6 text-white">
+          <div class="space-y-6">
+            <h1 class="font-semibold text-2xl">For Work</h1>
+            <p class="text-xl pb-8">
+              Work efficiently with teammates and clients, stay in sync on
+              projects, and keep company data safe — all in one place.
+            </p>
+            <a
+              href="#"
+              class="bg-[#3984FF] px-8 py-6 rounded-3xl font-semibold w-auto text-white"
+              >Try it for free <i class="ri-arrow-right-line"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-[#2B2929]">
+        <img src="./images/personaluse.webp" alt="" />
+        <div class="pt-10 pb-10 pl-6 pr-6 text-white">
+          <div class="space-y-6">
+            <h1 class="font-semibold text-2xl">For personal use</h1>
+            <p class="text-xl pb-8">
+              Keep everything that’s important to you and your family shareable
+              and safe in one place. Back up files in the cloud, share photos
+              and videos, and more.
+            </p>
+            <a
+              href="#"
+              class="bg-[#3984FF] px-8 py-6 rounded-3xl font-semibold w-auto text-white"
+              >Try it for free <i class="ri-arrow-right-line"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="text-white">
+        <h1 class="text-xl font-semibold pb-8">Get organized. Get working. Get Dropbox.</h1>
+        <a
+          href="#"
+          class="bg-[#3984FF] px-8 py-6 rounded-3xl font-semibold w-auto text-white"
+          >Try it for free <i class="ri-arrow-right-line"></i
+        ></a>
+      </div>
     </div>
+    <!-- footer added -->
+     <div class="bg-[#000000] pt-10 pl-6 pr-6 pb-10 text-white">
+      <div class="grid grid-rows-2 grid-cols-2">
+        <div class="p-4">
+          <h1 class="font-semibold text-xl pb-2">Dropbox</h1>
+          <a href="#">Desktop App</a>
+          <a href="#">Mobile App</a>
+          <a href="#">Integration</a>
+          <a href="#">Features</a>
+          <a href="#">Solutions</a>
+          <a href="#">Security</a>
+          <a href="#">Early access</a>
+          <a href="#">Templates</a>
+          <a href="#">Free tools</a>
+        </div>
+        
+        <div class="p-4">
+          <h1 class="font-semibold text-xl pb-2">Products</h1>
+          <a href="#">Desktop App</a>
+          <a href="#">Mobile App</a>
+          <a href="#">Integration</a>
+          <a href="#">Features</a>
+          <a href="#">Solutions</a>
+          <a href="#">Security</a>
+          <a href="#">Early access</a>
+          <a href="#">Templates</a>
+          <a href="#">Free tools</a>
+        </div>
+
+        <div class="p-4">
+          <h1 class="font-semibold text-xl pb-2">Features</h1>
+          <a href="#">Desktop App</a>
+          <a href="#">Mobile App</a>
+          <a href="#">Integration</a>
+          <a href="#">Features</a>
+          <a href="#">Solutions</a>
+          <a href="#">Security</a>
+          <a href="#">Early access</a>
+          <a href="#">Templates</a>
+          <a href="#">Free tools</a>
+        </div>
+
+        <div class="p-4">
+          <h1 class="font-semibold text-xl pb-2">Support</h1>
+          <a href="#">Desktop App</a>
+          <a href="#">Mobile App</a>
+          <a href="#">Integration</a>
+          <a href="#">Features</a>
+          <a href="#">Solutions</a>
+          <a href="#">Security</a>
+          <a href="#">Early access</a>
+          <a href="#">Templates</a>
+          <a href="#">Free tools</a>
+        </div>
+
+      </div>
+      <!-- links -->
+      <div class="pt-10 pb-10">
+        <i class="ri-twitter-x-line"></i>
+        <i class="ri-facebook-circle-fill"></i>
+        <i class="ri-youtube-line"></i>
+      </div>
+      <p class="font-semibold text-white hover:underline" ><i class="ri-global-line pr-4"></i>English(Unites States)<i class="ri-arrow-right-s-line"></i></p>
+     </div>
   </body>
 </html>
