--- a/src/dropbox/dropbox.html
+++ b/src/dropbox/dropbox.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,19 +11,36 @@
     <title>Document</title>
   </head>
   <body>
+
+
     <!-- navbar -->
-    <nav class="flex justify-between items-center fixed w-screen bg-white h-12">
-      <img src="./images/dropicon.png" alt="logo" class="h-full" />
-      <div class="flex items-center gap-5 mr-4 font-medium">
+    <nav
+      class="flex justify-between items-center fixed w-screen bg-white h-12 md:h-14"
+    >
+      <img src="./images/dropicon.png" alt="logo" class="md:ml-10 h-12" />
+      <div class="flex items-center gap-5 mr-4 font-medium md:hidden xl:hidden">
         <a href="#">Sign up</a>
         <a href="#">Log in</a>
         <i class="ri-menu-line font-semibold text-2xl"></i>
       </div>
+      <!-- Desktop view -->
+      <div class="hidden md:flex items-center gap-5 mr-4 font-medium">
+        <i class="ri-global-line"></i>
+        <a href="#">Sign up</a>
+        <a href="#">Log in</a>
+        <a
+          href="#"
+          class="flex justify-center items-center text-white bg-[#3984FF] h-10 rounded-lg font-semibold space-x-4 w-48 md:mr-6"
+          >Get Started</a
+        >
+      </div>
     </nav>
+
+
     <!-- blackui -->
-    <div class="pt-12">
+    <div class="pt-12 h-screen md:flex ">
       <!-- top -->
-      <div class="bg-[#2B2929] p-6 space-y-8 text-left">
+      <div class="bg-[#2B2929] p-6 space-y-8 text-left md:p-20">
         <h1 class="text-4xl text-white font-semibold">
           Everything you and your business need to work efficiently, all in one
           place
@@ -45,8 +62,13 @@
         </div>
       </div>
       <!-- bottom -->
-      <div class="bg-[#1E1919] h-full">
-        <video src="./images/video.mp4" autoplay class="rounded-sm"></video>
+      <div class="bg-[#1E1919] md:p-20">
+        <video
+          src="./images/video.mp4"
+          autoplay
+          loop
+          class="rounded-sm"
+        ></video>
       </div>
     </div>
     <div class="bg-[#F7F5F2]">
@@ -60,9 +82,13 @@
         </p>
       </div>
     </div>
+
+
     <!-- pricing -->
     <div class="mt-14 p-4">
-      <div class="flex justify-center items-center pt-6 pb-6 gap-6">
+      <div
+        class="flex justify-center items-center pt-6 pb-6 gap-6 md:flex md:justify-start"
+      >
         <div>
           <input
             type="radio"
@@ -85,11 +111,9 @@
         </div>
       </div>
       <!-- cards -->
-      <div class="flex flex-col p-4 space-y-8">
+      <div class="flex flex-col p-4 space-y-8 md:flex-row md:justify-around">
         <!-- card 1 -->
-        <div
-          class="card bg-[#F7F5F2] text-left p-4 border rounded-xl space-y-6"
-        >
+        <div class="card text-left p-4 space-y-6 md:p-8">
           <div class="space-y-2">
             <p class="text-sm text-slate-900">For Professionals</p>
             <h1 class="text-2xl font-semibold">Essentials</h1>
@@ -130,7 +154,7 @@
         </div>
         <!-- card 2 -->
         <div
-          class="card bg-[#F7F5F2] text-left p-4 border rounded-xl space-y-6"
+          class="card bg-[#F7F5F2] text-left p-4 border rounded-xl space-y-6 md:p-8"
         >
           <div class="space-y-2">
             <p class="text-sm text-slate-900">For smaller teams</p>
@@ -172,7 +196,7 @@
         </div>
         <!-- card 3 -->
         <div
-          class="card bg-[#F7F5F2] text-left p-4 border rounded-xl space-y-6"
+          class="card bg-[#F7F5F2] text-left p-4 border rounded-xl space-y-6 md:p-8"
         >
           <div class="space-y-2">
             <p class="text-sm text-slate-900">For large teams</p>
@@ -214,12 +238,14 @@
         </div>
       </div>
     </div>
+
+
     <!-- information box -->
     <div class="space-y-10 bg-[#F7F5F2] pb-10">
       <h1 class="text-3xl font-semibold pl-4 pr-4 text-center pt-10">
         Dropbox supports you and your business at every stage
       </h1>
-      <div class="pl-10 pr-10 space-y-8">
+      <div class="pl-10 pr-10 space-y-8 md:flex justify-around items-start">
         <div class="space-y-3">
           <img src="./images/lock.svg" alt="lock" />
           <h1 class="text-2xl font-semibold">Store and protect your files</h1>
@@ -257,6 +283,8 @@
         </div>
       </div>
     </div>
+
+
     <!-- usage -->
     <div
       class="bg-[#1E1919] text-white pt-10 space-y-10 border-b-2 border-slate-500"
@@ -265,28 +293,34 @@
         <h1 class="text-center font-semibold text-2xl ml-6 mr-6">
           Over 600,000 teams use Dropbox
         </h1>
-        <p class="text-center text-xl font-semibold ml-6 mr-6">
+        <p class="text-center text-xl font-medium ml-6 mr-6">
           Learn more about our customers<i class="ri-arrow-right-line"></i>
         </p>
       </div>
-      <div class="pl-8 pr-8 text-start">
-        <div class="flex justify-center items-center p-12 bg-[#B4DC19]">
+      <div class="pl-8 pr-8 text-start md:flex flex-row gap-8 md:h-screen">
+        <div class="flex justify-center items-center p-12 bg-[#B4DC19] md:w-1/2 ">
           <img src="./images/designit.svg" alt="" />
         </div>
-        <p class="pb-6">
-          “Our team is constantly working across different countries, time zones
-          and offices. A lot of solutions can accommodate that now, but none
-          make it as seamless as Dropbox and Dropbox Paper.”
-        </p>
-        <a href="#" class="font-semibold text-xl"
-          >View case studies<i class="ri-arrow-right-line"></i
-        ></a>
-        <p class="font-semibold">Morten Thomsen</p>
-        <p class="text-slate-700 font-semibold">Global IT Lead</p>
+        <div class="space-y-6 md:w-1/2">
+          <p class="pb-6">
+            “Our team is constantly working across different countries, time
+            zones and offices. A lot of solutions can accommodate that now, but
+            none make it as seamless as Dropbox and Dropbox Paper.”
+          </p>
+          <a href="#" class="font-semibold text-xl"
+            >View case studies<i class="ri-arrow-right-line"></i
+          ></a>
+          <section>
+            <p class="font-semibold">Morten Thomsen</p>
+            <p class="text-slate-700 font-semibold">Global IT Lead</p>
+          </section>
+        </div>
       </div>
     </div>
+
+
     <!-- blackbox -->
-    <div class="pt-10 pb-10 pl-6 pr-6 space-y-6 bg-[#1E1919]">
+    <div class="pt-10 pb-10 pl-6 pr-6 space-y-6 bg-[#1E1919] md:flex flex-row gap-8 h-2/3">
       <div class="bg-[#2B2929]">
         <img src="./images/forwork.webp" alt="" />
         <div class="pt-10 pb-10 pl-6 pr-6 text-white">
@@ -324,8 +358,10 @@
         </div>
       </div>
 
-      <div class="text-white">
-        <h1 class="text-xl font-semibold pb-8">Get organized. Get working. Get Dropbox.</h1>
+      <div class="text-white md:hidden">
+        <h1 class="text-xl font-semibold pb-8">
+          Get organized. Get working. Get Dropbox.
+        </h1>
         <a
           href="#"
           class="bg-[#3984FF] px-8 py-6 rounded-3xl font-semibold w-auto text-white"
@@ -333,10 +369,22 @@
         ></a>
       </div>
     </div>
+    <div class="text-white hidden md:flex justify-around items-center bg-[#1E1919] pb-8">
+      <h1 class="text-3xl font-semibold pb-8">
+        Get organized. Get working. Get Dropbox.
+      </h1>
+      <a
+        href="#"
+        class="bg-[#3984FF] px-8 py-6 rounded-3xl font-semibold w-auto text-white"
+        >Try it for free <i class="ri-arrow-right-line"></i
+      ></a>
+    </div>
+
+    
     <!-- footer added -->
-     <div class="bg-[#000000] pt-10 pl-6 pr-6 pb-10 text-white">
-      <div class="grid grid-rows-2 grid-cols-2">
-        <div class="p-4">
+    <div class="bg-[#000000] pt-10 pl-6 pr-6 pb-10 text-white">
+      <div class="grid grid-rows-2 grid-cols-2 md:flex flex-row justify-around">
+        <div class="p-4 md:flex flex-col justify-start">
           <h1 class="font-semibold text-xl pb-2">Dropbox</h1>
           <a href="#">Desktop App</a>
           <a href="#">Mobile App</a>
@@ -348,8 +396,8 @@
           <a href="#">Templates</a>
           <a href="#">Free tools</a>
         </div>
-        
-        <div class="p-4">
+
+        <div class="p-4 md:flex flex-col justify-start">
           <h1 class="font-semibold text-xl pb-2">Products</h1>
           <a href="#">Desktop App</a>
           <a href="#">Mobile App</a>
@@ -362,7 +410,7 @@
           <a href="#">Free tools</a>
         </div>
 
-        <div class="p-4">
+        <div class="p-4 md:flex flex-col justify-start">
           <h1 class="font-semibold text-xl pb-2">Features</h1>
           <a href="#">Desktop App</a>
           <a href="#">Mobile App</a>
@@ -375,7 +423,7 @@
           <a href="#">Free tools</a>
         </div>
 
-        <div class="p-4">
+        <div class="p-4 md:flex flex-col justify-start">
           <h1 class="font-semibold text-xl pb-2">Support</h1>
           <a href="#">Desktop App</a>
           <a href="#">Mobile App</a>
@@ -388,14 +436,43 @@
           <a href="#">Free tools</a>
         </div>
 
+        <div class="p-4 hidden md:flex flex-col justify-start">
+          <h1 class="font-semibold text-xl pb-2">Resources</h1>
+          <a href="#">Desktop App</a>
+          <a href="#">Mobile App</a>
+          <a href="#">Integration</a>
+          <a href="#">Features</a>
+          <a href="#">Solutions</a>
+          <a href="#">Security</a>
+          <a href="#">Early access</a>
+          <a href="#">Templates</a>
+          <a href="#">Free tools</a>
+        </div>
+
+        <div class="p-4 hidden md:flex flex-col justify-start">
+          <h1 class="font-semibold text-xl pb-2">Company</h1>
+          <a href="#">Desktop App</a>
+          <a href="#">Mobile App</a>
+          <a href="#">Integration</a>
+          <a href="#">Features</a>
+          <a href="#">Solutions</a>
+          <a href="#">Security</a>
+          <a href="#">Early access</a>
+          <a href="#">Templates</a>
+          <a href="#">Free tools</a>
+        </div>
       </div>
       <!-- links -->
-      <div class="pt-10 pb-10">
+      <div class="pt-10 pb-10 md:pl-14">
         <i class="ri-twitter-x-line"></i>
         <i class="ri-facebook-circle-fill"></i>
         <i class="ri-youtube-line"></i>
       </div>
-      <p class="font-semibold text-white hover:underline" ><i class="ri-global-line pr-4"></i>English(Unites States)<i class="ri-arrow-right-s-line"></i></p>
-     </div>
+      <p class="font-semibold text-white hover:underline md:pl-14">
+        <i class="ri-global-line pr-4"></i>English(Unites States)<i
+          class="ri-arrow-right-s-line"
+        ></i>
+      </p>
+    </div>
   </body>
 </html>
