feedback button added at bottom right

--- a/src/Gym/gym.html
+++ b/src/Gym/gym.html
@@ -66,14 +66,34 @@
         </li>
       </ul>
     </header>
-
-    <div class="flex flex-col">
-        <div class="h-1/2">
-            <img src="./images/mangym.jpg" alt="photo" class="">
+    <!-- feedback -->
+    <div
+      class="font-semibold bg-[#C1A7E2] fixed p-4 rounded-md right-0 bottom-4 transform rotate-90"
+    >
+      <a href="#" class="">Feedback</a>
+    </div>
+    <div class="flex flex-col h-screen">
+      <img src="./images/mangym.jpg" alt="" class="h-2/3 object-cover" />
+      <div
+        class="h-1/2 p-10 pr-0"
+        style="background-image: url(./images/bg.jpg)"
+      >
+        <div class="bg-[#440099] p-6 space-y-4">
+          <h1 class="text-white font-extrabold text-3xl bg-[#440099]">
+            Anytime, anywhere. And now with Apple Fitness+.
+          </h1>
+          <p class="text-white">
+            Try Anytime Fitness for free and get your personalized plan PLUS
+            redeem up to 3 months of Apple Fitness+ on us!* Ready to get
+            started?
+          </p>
+          <button class="bg-white rounded-full p-4">TRY US FOR FREE</button>
+          <p class="text-white text-xs">
+            Terms, conditions, & restrictions apply.
+            <a href="#" class="underline">See details</a>
+          </p>
         </div>
-        <div class="bg-green-400">
-            <h1>sldkflsmdfl</h1>
-        </div>
+      </div>
     </div>
 
     <script src="script.js"></script>
