--- a/src/Gym/gym.html
+++ b/src/Gym/gym.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gym</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../output.css" />
   </head>
   <body>
@@ -95,7 +99,97 @@
         </div>
       </div>
     </div>
+    <div class="p-10 space-y-6">
+      <h1 class="text-3xl font-extrabold">
+        Find a Gym with All the Right Benefits
+      </h1>
+      <div class="flex flex-col">
+        <div>
+          <p>
+            <i class="ri-check-line text-[#6E38D5] font-extrabold pr-4"></i>Open
+            24 Hours
+          </p>
+          <p>
+            <i class="ri-check-line text-[#6E38D5] font-extrabold pr-4"></i
+            >Access to 5000+ gym
+          </p>
+        </div>
+        <div>
+          <p>
+            <i class="ri-check-line text-[#6E38D5] font-extrabold pr-4"></i
+            >personalized Plan
+          </p>
+          <p>
+            <i class="ri-check-line text-[#6E38D5] font-extrabold pr-4"></i
+            >Personal & group training
+          </p>
+        </div>
+        <div>
+          <p>
+            <i class="ri-check-line text-[#6E38D5] font-extrabold pr-4"></i>Free
+            fitness consultation
+          </p>
+          <p>
+            <i class="ri-check-line text-[#6E38D5] font-extrabold pr-4"></i>Free
+            Access to apple fitness+ <span>(see details)</span>
+          </p>
+        </div>
+      </div>
 
+      <form class="flex items-center max-w-72 mx-auto">
+        <label for="simple-search" class="sr-only">Search</label>
+        <div class="relative w-full">
+          <div
+            class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
+          >
+            <svg
+              class="w-4 h-4 text-gray-500 dark:text-gray-400"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 18 20"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 5v10M3 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 10a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm12 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0V6a3 3 0 0 0-3-3H9m1.5-2-2 2 2 2"
+              />
+            </svg>
+          </div>
+          <input
+            type="text"
+            id="simple-search"
+            class=" border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            placeholder="Search branch name..."
+            required
+          />
+        </div>
+        <button
+          type="submit"
+          class="p-2.5 ms-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        >
+          <svg
+            class="w-4 h-4"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 20 20"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
+            />
+          </svg>
+          <span class="sr-only">Search</span>
+        </button>
+      </form>
+    </div>
+    <!-- anytimefitness.com -->
     <script src="script.js"></script>
   </body>
 </html>
